--- a/style2.css
+++ b/style2.css
@@ -183,40 +183,27 @@ main.content_main {
  display: block;
  width: 20vw;
 }
-.skill_circle{
- display: block;
- width: 150px; height: 150px;
- margin:auto;
- border:15px solid #ddd;
- border-radius: 50%;
- position: relative;
 
- transition: ease-out 0.2s;
-}
-.skill_circle::after{
- content:'';
- display: block;
- width: 150px;
- height: 150px;
- position: absolute;
- left: -10%;
- top: -10%;
- border: 15px solid #7887D1;
- border-radius: 50%;
+.pie-chart {
+    position: relative;
+    display:inline-block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.3s;
+  }
+  span.center{
+    background: #fff;
+    display : block;
+    position: absolute;
+    top:50%; left:50%;
+    width:170px; height:170px;
+    border-radius: 50%;
+    text-align:center; line-height: 170px;
+    font-size:16px;
+    transform: translate(-50%, -50%);
+  }
 
- transform-origin: center right;
- animation: loading-1 1.8s linear forwards;
-}
-/* @keyframes loading-1{
- 0%{
-     -webkit-transform: rotate(0deg);
-     transform: rotate(0deg);
- }
- 100%{
-     -webkit-transform: rotate(180deg);
-     transform: rotate(180deg);
- }
-} */
 .skill_name{
  display: block; width: 100%;
  margin-top: 2vw;
